@@ -1,3 +1,7 @@
+2003-09-07  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* utils/op_help.c: check than all events are distincts
+
 2003-09-06  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pch-c++.h:
